<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:maxWidth="420dp">

    <ImageView
        android:id="@+id/logo_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_logo_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_foreground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7.84dp"
        android:layout_marginTop="17.17dp"
        android:layout_marginRight="6.87dp"
        android:layout_marginBottom="36.69dp"
        android:src="@drawable/ic_logo_foreground"
        app:layout_constraintBottom_toBottomOf="@id/logo_background"
        app:layout_constraintLeft_toLeftOf="@id/logo_background"
        app:layout_constraintRight_toRightOf="@id/logo_background"
        app:layout_constraintTop_toTopOf="@id/logo_background" />

    <TextView
        android:id="@+id/authorization_title"
        fontPath="@string/default_font_bold_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/authorization_title"
        android:textColor="@color/PE_blue_gray_01"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/logo_background"
        app:layout_constraintRight_toRightOf="@id/logo_background"
        app:layout_constraintTop_toBottomOf="@id/logo_background"
        tools:ignore="MissingPrefix" />

    <LinearLayout
        android:id="@+id/email_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authorization_title">

        <TextView
            android:id="@+id/email_input_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="4dp"
            android:text="@string/e_mail_input_title"
            android:textColor="@color/PE_bright_red"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Введите ваш e-mail"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:endIconMode="password_toggle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="4dp"
            android:text="@string/password_input_title"
            android:textColor="@color/PE_bright_red"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            app:endIconMode="password_toggle"
            app:endIconTint="#CFCFE6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Введите ваш e-mail"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            android:text="@string/authorization_data_invalid"
            android:textColor="#ff0000"
            android:textSize="12sp" />
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/authorization_confirm"
        fontPath="@string/default_font_bold_path"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="168dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/authorization_confirm"
        android:textAllCaps="false"
        android:textSize="20dp"
        app:cornerRadius="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input" />

    <TextView
        android:textColor="@color/PE_blue_gray_03"
        android:id="@+id/remember_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="84dp"
        android:text="@string/remember_password"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authorization_confirm" />

    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginRight="20dp"
        android:text="@string/registration"
        android:textColor="@color/PE_bright_red"
        android:textSize="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authorization_confirm" />
</androidx.constraintlayout.widget.ConstraintLayout>